Fixed width of left column. Fix spec table on vrml_implementation_texturing.php to wrap.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/www@6782 afe8dcc5-9094-451b-8773-5f495042a737

--- a/htdocs/vrmlengine.css
+++ b/htdocs/vrmlengine.css
@@ -169,14 +169,14 @@ table.specification th {
   font-weight:bold;
   border-width:medium;
   padding:8px;
-  white-space:nowrap;
+  /* white-space:nowrap; */
 }
 table.specification td {
   border-style:groove;
   font-weight:normal;
   border-width:medium;
   padding:8px;
-  white-space:nowrap;
+  /* white-space:nowrap; */
 }
 
 table.layout { margin: 0px; padding: 0px; border: 0px; }
@@ -190,6 +190,8 @@ div.sidebar {
   font-size: 0.7em;
   clear: right; /* for chm link on kambi_script */
 }
+
+col.sidebar { width: 20em; }
 
 div.sidebar_title { text-align: center; }
 div.sidebar_title h2 { margin-top: 0px; font-size: medium; }
